--- a/css/bool12.css
+++ b/css/bool12.css
@@ -10,7 +10,7 @@
 
 .container{
     width: 1176px;
-    margin: 0 auto;
+    margin:auto;
 }
 .container-fluid{
     width: 100%;
@@ -23,15 +23,15 @@
 
 /* colonne */
 
-.col{
+[class*="col-"] {
     flex-grow: 1;
     flex-basis: 0;
     width: 100%;
 }
 
-[class*="col-"] {
-    flex: 0 0 auto;
-}
+/* [class*="col-"] {
+    flex: 1 0 auto;
+} */
 
 
 
