--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
     box-sizing: border-box;
 }
 .box{
-    height: 50px;
+    width: auto;
+    height: 70px;
     padding: 10px;
     background-color: blue;
     border: 1px solid white;
@@ -16,7 +17,7 @@
 .nested-box{
     height: 100%;
     padding: 10px;
-    background-color: lightgreen;
+    background-color: lime;
     border: 1px solid white;
     color: white;
     font-size: 15px;
